# roomba

./: AGENTS.md  CLAUDE.md  Cargo.toml  TODO.md  justfile
crates/robot/: Cargo.toml
crates/robot/src/: ekf.rs  lib.rs  sensors.rs
crates/shared/: Cargo.toml
crates/shared/src/: commands.rs  geometry.rs  hardware.rs  io.rs  lib.rs  map.rs  measurement.rs  robot.rs  sensors.rs  state.rs
crates/shared/src/command/: mod.rs
crates/shared/src/geometry/: mod.rs
crates/shared/src/hardware/: mod.rs
crates/shared/src/map/: mod.rs
crates/shared/src/measurement/: mod.rs
crates/shared/src/pose/: mod.rs  test.rs
crates/shared/src/tests/: map.rs
crates/shared/src/validation/: map.rs
crates/sim/: Cargo.toml
crates/sim/src/: draw.rs  host.rs  main.rs  map.rs  sensors.rs  sim.rs
docs/: 01-overview.excalidraw  02-modes.excalidraw  03-concurrency.excalidraw  04-plan-tick.excalidraw  05-act-sim-seam.excalidraw  06-ekf-localize.excalidraw  07-coverage.excalidraw  08-object-handling.excalidraw  context.md  implementation-plan.md
references/: Roomba Sim EKF Coverage Validator.md  Roomba-Style Autonomous Robot — Project Blueprint.md
