[workspace]
resolver = "3"
members = ["crates/shared", "crates/robot", "crates/sim"]

# Shared dependency versions live here. Crates opt in with `dep.workspace = true`
# so every crate stays on the same version with no drift.
[workspace.dependencies]
# Internal crates
shared = { path = "crates/shared" }
robot = { path = "crates/robot" }

# Serialization — domain types + map files
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.2"

# Math — matrix plumbing for the hand-written EKF
nalgebra = "0.35.0"

# Simulation
macroquad = "0.4.15"
rand = "0.10.1"

# Error handling — thiserror in libs, anyhow in the binary
thiserror = "2.0.18"
anyhow = "1.0.103"
